# stm32mp135f_ebook_reader

./: .#tasks.py  .clang-tidy  .clangd  .gitignore  Config.in  Doxyfile  Makefile  README.md  TO-DO  a.out  before  replace.py  tasks.py
apps/: compile_commands.json  main.c
br2_external_tree/: errors.md
buildroot_external_tree/: README.md
configs/: st_stm32mp135f_dk_demo_defconfig
display_driver/: README.md  compile_commands.json  cross-compile.txt  meson.build  meson.options  meson_options.txt  native-compile.txt
display_driver/examples/: bw_turtle.c  convert_1bit_image.py  convert_4bit_image.py  convert_image.py  convert_png_image.py  convert_png_image_vertical.py
display_driver/examples/images/: generate_vertical_stripes.py
display_driver/examples/rpi4b/: board.h  picture.h  rpi_clear_example.c  rpi_display_full_example.c  rpi_rst_example.c  rpi_temp_example.c
display_driver/examples/stm32mp135f/: board.h  cat_gray4.h  cat_gray4_roatated.h  cats_gray4.h  penguin100x150.h  penguin150x100.h  penguin150x120.h  penguin160x120.h  penguin256x256.h  stm_clear_example.c  stm_display_fast_example.c  stm_display_full_example.c  stm_display_gray_example.c  stm_display_part_example.c  stm_display_part_picture_example.c  stm_rst_example.c  turtle2_gray4.h  tutrle_gray4.h
display_driver/include/: display_driver.h
display_driver/src/: _error.h  board.c  board.h  display_driver.c  error.c  error.h  gpio.c  gpio.h  image.c  image.h  main.c  rpi.c  spi.c  spi.h  stm32.c  stm32board.c  stm32board.h  waveshare_7in5_V2b.c  waveshare_7in5_V2b.h
display_driver/src/boards/: board.c  board.h  raspberrypi_5.c  raspberrypi_5.h  stm32mp135f-dk.c  stm32mp135f-dk.h  stm32mp135f_dk.c  stm32mp135f_dk.h
display_driver/src/display/: display.c  display.h  wvs75V2b.c  wvs75V2b.h
display_driver/src/drivers/: driver.c  driver.h  waveshare_7in5_V2.c  waveshare_7in5_V2.h  waveshare_7in5_V2b.c  waveshare_7in5_V2b.h
display_driver/src/gpio/: gpio.c  gpio.h
display_driver/src/spi/: spi.c  spi.h
display_driver/src/utils/: _err.h  err.c  err.h  graphic.c  graphic.h  io.c  io.h  list.h  log.h  mem.c  mem.h  time.c  time.h
display_driver/subprojects/: libgpiod.wrap
display_driver/test/: cat_not_rotated.h  cat_rotated.h  cat_sm.h  conftest.c  conftest.h  meson.build  rotate.h  test_gpio.c  test_list.c  test_rotate.c  test_wvs75v2b.c  turtle_horizontal.h  turtle_vertical.h
display_driver/test/mocks/: gpiod.c
docs/: .$ebook_reader_fsm.drawio.bkp  .$ebook_reader_fsm.drawio.dtmp  Doxyfile  a.cp  api.rst  app.rst  battery.rst  buildroot.rst  conf.py  development.rst  display.rst  display_driver.rst  dummy_app.rst  ebook_reader_fsm.drawio  enclosure.rst  getting_started.rst  gui.rst  hardware.rst  index.rst  internals.md  meson.rst  mpu.rst  qt5.md  release-notes.md
ebook_reader/: .clangd  README.md  meson.build  meson.options
ebook_reader/data/: 480x800_img_boot_screen_adjusted
ebook_reader/src/: main.c
ebook_reader/src/app/: app.c  app.h  core.c  core.h  error.c  menu.c  module.c  module.h  module_error.c  module_error.h  module_menu.c  module_menu.h  module_reader.c  module_reader.h  reader.c  state.c  state.h  state_error.c  state_error.h  state_menu.c  state_menu.h  state_reader.c  state_reader.h
ebook_reader/src/book/: book.c  book.h  book_internal.h  core.c  core.h  pdf.c  pdf.h
ebook_reader/src/book_settings/: book_settings.c  book_settings.h  core.h  view.c  widgets.c
ebook_reader/src/core/: book_reader.c  book_reader.h  core.c  core.h  core_internal.h  error.c  error.h  menu.c  menu.h  start.h
ebook_reader/src/db/: db.c  db.h
ebook_reader/src/display/: display.c  display.h  display_internal.h  wvs7in5v2b.c  wvs7in5v2b.h  x11.c  x11.h
ebook_reader/src/event_bus/: core.h  event_bus.c  event_bus.h  event_queue.c
ebook_reader/src/event_queue/: event_queue.c  event_queue.h
ebook_reader/src/gui/: gui.c  gui.h  gui_internal.h  lvgl_wrapper.c  lvgl_wrapper.h
ebook_reader/src/gui/data/: boot_screen.h
ebook_reader/src/gui/lv/: display.c  display.h  lv.c  lv.h
ebook_reader/src/gui/lv/display/: display.c  display.h  wvs7in5v2b.c  wvs7in5v2b.h  x11.c
ebook_reader/src/gui/view/: main_view.h  view.c  view.h
ebook_reader/src/menu/: core.h  menu.c  menu.h  view.c  widgets.c
ebook_reader/src/menu_screen/: core.h  menu_screen.c  menu_screen.h  widgets.c
ebook_reader/src/reader/: core.h  reader.c  reader.h  view.c  widgets.c
ebook_reader/src/reader_screen/: core.h  reader_screen.c  reader_screen.h  widgets.c
ebook_reader/src/ui/: core.c  core.h  display.c  display.h  display_dd.c  display_wvs7in5v2.c  display_wvs7in5v2.h  display_wvs7in5v2b.c  display_wvs7in5v2b.h  display_x11.c  display_x11.h  img_boot_screen.c  picture.h  screen.c  screen.h  screen_menu.c  screen_menu.h  screen_reader.c  screen_reader.h  ui.h  widgets.c  widgets.h
ebook_reader/src/utils/: config.h  err.c  err.h  error.c  error.h  graphic.c  graphic.h  log.h  lvgl.c  lvgl.h  mem.c  mem.h  memory.h  settings.c  settings.h  time.c  time.h  zero_list.c  zero_list.h  zlist.c  zlist.h
ebook_reader/subprojects/: cmake_poppler.wrap  display_driver.wrap  libgpiod.wrap  libopenjp2.wrap  lvgl.wrap  poppler.wrap  unity.wrap
ebook_reader/subprojects/packagefiles/lvgl/: lv_conf.h.jinja  lv_conf.h.patch  lv_conf.template.h  src_meson.build.patch
ebook_reader/subprojects/poppler/: README.md  meson.build
ebook_reader/subprojects/poppler/subprojects/: cmake_poppler.wrap
ebook_reader/subprojects/poppler/tools/: poppler.py
ebook_reader/test/: conftest.c  meson.build  test_core.c  test_list.c  test_unity.c
ebook_reader/tools/: build_poppler.py  poppler.py  render_lv_conf.py
fdts/: stm32mp13-fw-config-mem-encrypt.dtsi  stm32mp15-ssp-bl2.dtsi  stm32mp157f-dk2.dts  stm32mp21-lpddr4-1x16Gbits-1x16bits-800MHz.dtsi  stm32mp215f-dk-ca35tdcid-fw-config.dtsi  stm32mp215f-dk.dts  stm32mp21xxam-pinctrl.dtsi  stm32mp21xxao-pinctrl.dtsi  stm32mp231.dtsi  stm32mp235f-dk.dts  stm32mp251.dtsi  stm32mp257f-dk.dts
linux/: Config.in
make_helpers/: build_macros.mk
src/: example.h  test_gpiod.c
(+255 files in other folders)
